refactor: use Adventure MiniMessage for selection wand lore
Updated wand item meta to use MiniMessage components with italic disabled, replacing legacy color codes for consistent formatting and better visual appearance. Added `noItalic()` helper to prevent default italic styling in item names/lore.